refactor: remove unnecessary null checks, simplify logic, adjust return types, clean test setups, and remove unused dependencies